--- a/JavaScriptEnsayo/JScript2/EnsayoJScript2.html
+++ b/JavaScriptEnsayo/JScript2/EnsayoJScript2.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-     <title>JavaScrip 2</title>
+     <title>JavaScript 2</title>
    </head>
    <body>
      <script src="JavaScript2.js"></script>
