--- a/CSS/ClasesCSS/Clase1/index.html
+++ b/CSS/ClasesCSS/Clase1/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>Clase 1</title>
+    <!-- para poder usar css desde un archvio externo se usa
+      la siguiente etiqueta:
+      <link rel="stylesheet" type="text/css" href="direccion_del_archivo">        -->
     <link rel="stylesheet" type="text/css" href="clase1.css">
   </head>
   <body>
