--- a/CSS/ClasesCSS/Clase1/index.html
+++ b/CSS/ClasesCSS/Clase1/index.html
@@ -9,13 +9,20 @@
   <body>
     <div id="header">
       <h1>Contact us</h1>
+      <h2>Contact me the only one</h2>
     </div>
+     <h2 id="content-header">Contenido</h2>
+
     <p>Hello there</p>
     <p>Hello there</p>
-    <p>Hello there</p>
-    <p>Hello there</p>
-    <p>Hello there</p>
-    <p>Hello there</p>
-    <p>Hello there</p>
+
+     <a href="https://electronjs.org/">Electron</a>
+
+     <span>Es una etiqueta de span</span>
+
+     <span class="deck">etiqueta span 1</span>
+     <span class="deck">etiqueta span 2</span>
+     <span class="deck">etiqueta span 3</span>
+
   </body>
 <html>
